Update jvmArgs